# RTCDDARMP

./: .dockerignore  .flake8  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BUILD_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SECURITY_UPGRADE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
backend/api/: dashboard.py  drift.py  metrics.py  model.py  predict.py  retrain.py
backend/engines/: __init__.py  adwin.py  drift_detector.py  model_registry.py  model_validator.py  retrain_engine.py  stat_tests.py
backend/utils/: data_stream.py  json_encoder.py  logger.py  security.py
examples/: demo_scenario.py
frontend/: dashboard.js  index.html  styles.css
tests/: test_api.py  test_drift.py  test_retrain_pipeline.py
